--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.8.1",
+    "@types/google-map-react": "^2.1.5",
+    "google-map-react": "^2.1.10",
+    "leaflet": "^1.7.1",
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.9",
     "@types/node": "17.0.23",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "typescript": "4.6.3"
